# Logging-Cpp

./: CMakeLists.txt  main.cpp
logging/: factory.cpp  factory.hpp  level.cpp  level.hpp  logging.hpp  record.cpp  record.hpp
logging/error/: conversion_error.cpp  conversion_error.hpp  factory_error.cpp  factory_error.hpp
logging/filter/: filter.hpp
logging/format/: formatter.cpp  formatter.hpp  simple_formatter.cpp  simple_formatter.hpp
logging/handling/: file_handler.cpp  file_handler.hpp  handler.cpp  handler.hpp  stdout_handler.cpp  stdout_handler.hpp
logging/logger/: logger.cpp  logger.hpp  simple_logger.cpp  simple_logger.hpp
